<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">_Noughts</string>
    <string-array name="games_array">
        <item>Game 1</item>
        <item>Game 2</item>
        <item>Game 3</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_submit">Submit</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="new_game">New Game</string>
    <string name="invite_via_facebook">Invite via Facebook</string>
    <string name="play_vs_computer">Play vs. Computer</string>
    <string name="local_multiplayer">Local Multiplayer</string>
    <string name="invite_via_email">Invite via Email</string>
    <string name="cancel">Cancel</string>
    <string name="new_game_promo">"Noughts and Crosses", also known as "Tic-Tac-Toe" and "Xs and Os", is a game for two players.</string>
    <string name="game_no_opponent">vs. (No Opponent)</string>
    <string name="game_anonymous">vs. Anonymous</string>
</resources>
