<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_submit"
        android:actionLayout="@layout/action_button_layout"
        android:showAsAction="always"
        android:title="@string/action_submit"/>
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo_disabled"
        android:showAsAction="ifRoom|withText"
        android:enabled="false"
        android:title="@string/action_undo"/>
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo_disabled"
        android:showAsAction="ifRoom|withText"
        android:enabled="false"
        android:title="@string/action_redo"/>
    <item
        android:id="@+id/action_new_game"
        android:showAsAction="never"
        android:title="@string/new_game"/>

</menu>