<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        style="@style/new_game_menu_item"
        android:text="@string/new_game"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/invite_via_facebook"
        style="@style/new_game_menu_item"
        android:drawableStart="@drawable/ic_facebook_invite"
        android:text="@string/invite_via_facebook" />

    <TextView
        android:id="@+id/play_vs_computer"
        style="@style/new_game_menu_item"
        android:drawableStart="@drawable/ic_vs_computer"
        android:text="@string/play_vs_computer" />

    <TextView
        android:id="@+id/local_multiplayer"
        style="@style/new_game_menu_item"
        android:drawableStart="@drawable/ic_local_multiplayer"
        android:text="@string/local_multiplayer" />

    <TextView
        android:id="@+id/invite_via_url"
        style="@style/new_game_menu_item"
        android:drawableStart="@drawable/ic_link_invite"
        android:text="@string/invite_via_url" />

    <TextView
        android:id="@+id/new_game_menu_cancel"
        style="@style/new_game_menu_item"
        android:drawableStart="@drawable/ic_cancel"
        android:text="@string/cancel" />

</LinearLayout>